# terrestria

./: .gitignore  README.md  TODO.txt  aws_env_template.sh  aws_ids_template.sh
back/: .gitignore  README.md  build.sh  env_template.sh  jasmine.json  package-lock.json  package.json  tsconfig.json
back/deployment/: Dockerfile  build.sh  deploy.sh  deployment.md  stop_service.sh  task_template.json
back/environment/: env_template.sh
back/src/: actions.ts  advert_system.ts  agent_system.ts  app.ts  behaviour_system.ts  component_types.ts  config.ts  entity_factory.ts  entity_manager.ts  error.ts  event.ts  factory.ts  free_mode_impl.ts  free_mode_properties.ts  free_mode_subcomponent.ts  game.ts  game_logic.ts  game_objects.ts  geometry.ts  grid.ts  grid_mode_impl.ts  grid_mode_properties.ts  grid_mode_subcomponent.ts  inventory_system.ts  logger.ts  map_data.ts  (+14 more)
common/: action.ts  ad_component_packet.ts  advert_packet.ts  agent_system.ts  behaviour_system.ts  client_system.ts  component_types.ts  config.ts  constants.ts  definitions.ts  entity_manager.ts  error.ts  event.ts  game_objects.ts  geometry.ts  inventory_packet.ts  map_data.ts  physics_system.ts  pinata_api.ts  response.ts  scheduler.ts  server_system.ts  span.ts  spatial_component_packet.ts  spatial_packet.ts  spatial_system.ts  system.ts  utils.ts
front/: deploy.sh  deployment.md  jasmine.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
map_builder/: CMakeLists.txt
map_builder/src/: array.hpp  bitmap.cpp  bitmap.hpp  json.cpp  json.hpp  map_builder.cpp  span.cpp  span.hpp
(+115 files in other folders)
